[package]
name = "md-build-helper"
version = "0.1.0"
authors = ["Edward George <edward.george@maersk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"